--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ dina-share:
 dina-mysql:
   image: mysql:latest
   environment:
+    - TZ=Europe/Stockholm
     - MYSQL_ROOT_PASSWORD=password12
     - MYSQL_DATABASE=keycloak
     - MYSQL_USER=keycloak
@@ -24,6 +25,7 @@ dina-mysql:
 dina-keycloak:
   image: jboss/keycloak-mysql
   environment:
+    - TZ=Europe/Stockholm
     - MYSQL_DATABASE=keycloak
     - MYSQL_USER=keycloak
     - MYSQL_PASSWORD=keycloak
@@ -40,6 +42,7 @@ dina-keycloak:
 dina-wildfly:
   build: .
   environment:
+    - TZ=Europe/Stockholm
     - VIRTUAL_HOST=dina-web,admin.dina-web
     - VIRTUAL_PORT=8080,9990
   ports:
