--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,15 @@ dina-mysql:
     - dina-share
 
 dina-keycloak:
-  image: jboss/keycloak-mysql:1.6.1.Final
+  build: keycloak
   environment:
     - TZ=Europe/Stockholm
     - MYSQL_DATABASE=keycloak
     - MYSQL_USER=keycloak
     - MYSQL_PASSWORD=keycloak
-    - VIRTUAL_HOST=sso.dina-web
+    - VIRTUAL_HOST=sso
+    - VIRTUAL_PORT=8080
+    - VIRTUAL_PROTO=https
   ports:
     - "8080:8080"
     - "9990:9990"
@@ -45,6 +47,9 @@ dina-wildfly:
     - TZ=Europe/Stockholm
     - VIRTUAL_HOST=api.dina-web
     - VIRTUAL_PORT=8080
+  ports:
+    - "18080:8080"
+    - "19990:9990"
   links:
     - dina-keycloak
     - dina-mysql
