--- a/nginx-conf/app.conf
+++ b/nginx-conf/app.conf
@@ -29,4 +29,9 @@ server {
 	   include conf.d/proxy_headers.conf;
 	   proxy_pass http://as:8080;
 	}
+    
+    location /solr {
+	   include conf.d/solr_proxy_headers.conf;
+	   proxy_pass http://solr:8983;
+	}
 }
