--- a/nginx-conf/app.conf
+++ b/nginx-conf/app.conf
@@ -5,8 +5,13 @@ server {
 	access_log logs/host.access.log main;
 
 	location / {
-		root /user/share/nginx/html;
-		index index.html index.htm;
+	   include conf.d/proxy_headers.conf;
+	   proxy_pass http://as:8080;
+	}
+    
+    location /solr {
+	   include conf.d/solr_proxy_headers.conf;
+	   proxy_pass http://solr:8983;
 	}
 
 }
