add dumping of keycloak data into .sql into Makefile and automatic loading of this data when starting up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ ws-api:
     - VIRTUAL_HOST=beta-api.dina-web.net
     - VIRTUAL_PORT=443
     - VIRTUAL_PROTO=https
-    - CERT_NAME=shared
+    - CERT_NAME=dina-web.net
   links:
     - as
     - solr
