Move Solr header configuration into app.conf

--- a/nginx-conf/app.conf
+++ b/nginx-conf/app.conf
@@ -9,7 +9,7 @@ server {
 	}
 
     location /solr {
-	   include conf.d/solr_proxy_headers.conf;
+	   add_header Access-Control-Allow-Origin *;
 	   proxy_pass http://solr:8983;
 	}
 
