add dl of testdata from Internet Archive

--- a/testdata/Makefile
+++ b/testdata/Makefile
@@ -5,24 +5,24 @@ DW := $(DB) -D dina_web
 KC := $(DB) -D keycloak
 PWD := $(shell pwd)
 
-all: upload-empty-collections upload-accounts-keycloak
+all: load-empty-collections load-accounts-keycloak
 
-upload-may19:
+load-may19:
 	$(DW) < dina-labb-dump-05-19.sql
 
-upload-may20:
+load-may20:
 	$(DW) < Dump20160520-3.sql
 
-upload-users:
+load-users:
 	$(DW) < sprint-users.sql
 
-upload-empty-collections:
+load-empty-collections:
 	$(DW) < Dump20160520-3.sql
 
-upload-accounts-keycloak:
+load-accounts-keycloak:
 	$(KC) < ../mysql-shr/keycloak.sql
 
-upload-tsv:
+load-tsv:
 	docker run --rm -it --network host \
 		-v $(PWD)/sprint-users.tsv:/tmp/users.tsv \
 		dina/keycloak-cli java -jar KeycloakAdmin.one-jar.jar https://beta-sso.dina-web.net/auth /tmp/users.tsv
@@ -36,3 +36,16 @@ show-keycloak-users:
 debug:
 	docker exec -it collectionsapidocker_db_1 mysql \
 		-u root -ppassword12
+
+upload-ia:
+	@echo "Packaging and uploading data to Internet Archive"
+	tar cvfz betadata.tgz Dump20160520-3.sql
+	ia upload dw-betadata betadata.tgz --metadata="title:DINA-Web Data (Beta)"
+	rm betadata.tgz
+	firefox https://archive.org/details/dw-betadata &
+
+download-ia:
+	@echo "Downloading DINA-Web Data (Beta) using wget"
+	test -f Dump20160520-3.sql || (wget http://archive.org/download/dw-betadata/betadata.tgz -O betadata.tgz && tar xvfz betadata.tgz && rm betadata.tgz)
+
+
