--- a/testdata/Makefile
+++ b/testdata/Makefile
@@ -17,6 +17,8 @@ load-users:
 	$(DW) < sprint-users.sql
 
 load-empty-collections:
+	docker exec -i collectionsapidocker_db_1 \
+		mysql -u root -ppassword12 -e "create database dina_web;"
 	$(DW) < Dump20160520-3.sql
 
 load-accounts-keycloak:
