Edit , new name for the dina/collections-api:v0.1.9 - now it is dina/collections-api:v0.1.9

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ sso:
     - fs-share
 
 as:
-  image: dina/collections-api:v0.1.9
+  image: dina/collections-api-deprecated
   environment:
     - TZ=Europe/Stockholm
   links:
